# ADSCB

./: .gitignore  README.md  pyproject.toml  run_api_endpoint.py  run_embeddings.py  run_frontend.py  run_parser.py  run_scraper.py  streamlit_app.py
lancedb/langchain.lance/: _latest.manifest
lancedb/langchain.lance/_transactions/: 0-24773fce-9e9d-4678-95af-13621224b998.txn  1-87d289ae-60bd-40fd-a38f-025b21114842.txn  2-77320e27-6081-40bd-ba59-7e2f387e366e.txn
lancedb/langchain.lance/_versions/: 1.manifest  2.manifest
lancedb/langchain.lance/data/: 54126f1c-2f2e-4e84-9aa5-057d7919b0cb.lance
